@@ -1,5 +1,7 @@
 2015-12-30  Liu Xin  <meteor1113@qq.com>
 
+	* init/modules/init-toolbar.el: Remove recent-jump toolbar.
+
 	* init/modules/init-helm.el: Add helm.
 
 	* init/modules/init-toolbar.el (toggle-toolbar-menu): Refactor init-toolbar.
